# EduApp

./: .coverage  .gitignore  Questionnaire.txt  README.md  ci.yml  depends.txt  manage_services.sh  pubspec.yaml  qualifications.txt  requirements.txt  setup-pc.sh  setup.sh  setup_m.sh  test.txt
.github/workflows/: c-cpp.yml  ci.yml  cpp.yml  dart.yml  discord.yml
android/app/: build.gradle
app/EduApp/: CMakeLists.txt  EduApp_en_NZ.ts  customNavBar.cpp  customNavBar.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  navbar.cpp  navbar.h  navbar.ui  screen1.cpp  screen1.h  screen2.cpp  screen2.h  screen3.cpp  screen3.h
app/build-EduApp-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
app/build-EduApp-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-1e94f1a914c34d167783.json  cmakeFiles-v1-0e4e771221a029d3cf9f.json  codemodel-v2-f5f8d8a29e7d12e5b0a5.json  directory-.-Debug-5f9a64c74a3f32084a39.json  index-2023-09-13T10-35-12-0124.json  target-EduApp-Debug-7ad8a866865d43628d3a.json  target-EduApp_autogen-Debug-76f8c43b0a8b3dde4d20.json
app/build-EduApp-Desktop-Debug/.qt/: QtDeploySupport.cmake
app/build-EduApp-Desktop-Debug/.qtc_clangd/: compile_commands.json
app/build-EduApp-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: AvailabilityInternal.h.0A9CD88C6ABA56CF.idx  AvailabilityMacros.h.98C048329B6DD1E3.idx  AvailabilityVersions.h.460DA89FB279CC8D.idx  QAbstractItemModel.85AF568D24EC083C.idx  QAction.39871C02B9A97963.idx  QHBoxLayout.6C00D00A52F2C57A.idx  QLabel.786FBC4212F78568.idx  QLocale.1CB2AD94A5B63B58.idx  QMenuBar.B7FFE0D8E918E30F.idx  QSpacerItem.4497B612E92986F3.idx  QStackedWidget.956258EAD901F38A.idx  QStatusBar.FEBE0B6E40E09C0C.idx  QToolBar.F2A5C7F30E1E2F8A.idx  QTranslator.3D3014F061D9AA1A.idx  QVBoxLayout.5657E26A0D1400B8.idx  QVariant.B249A958FB1D9AAE.idx  QWidget.2C48408A4CBCEE03.idx  __assert.DFFC9B2B0B0EA7AC.idx  __availability.3D2717B933B30676.idx  __bit_reference.4565313E7DC9CBCF.idx  __bits.D49E79516B350E36.idx  __config.EB16E4B7C8D059CC.idx  __config_site.C1EE05B9CAEF722C.idx  __debug.C3801A3572DA2192.idx  __hash_table.8DA7F2F76BAF6D9A.idx  __mbstate_t.h.7E0BCF9642089857.idx  __node_handle.299D820E3B884B85.idx  (+743 more)
app/build-EduApp-Desktop-Debug/EduApp.app/Contents/: Info.plist
app/build-EduApp-Desktop-Debug/EduApp_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_navbar.cpp  moc_navbar.cpp.d  moc_screen1.cpp  moc_screen1.cpp.d  moc_screen2.cpp  moc_screen2.cpp.d  moc_screen3.cpp  moc_screen3.cpp.d
app/build-EduApp-Desktop-Debug/EduApp_autogen/include/: ui_mainwindow.h  ui_navbar.h
backend/: main.cpp
coverage/: lcov.info
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/cpp/: DegreeRequirements.cpp  DegreeRequirements.h  paper_checker.cpp  paper_checker.h
lib/cpp/rest-api/: CMakeLists.txt  httplib.h  main.cpp
lib/dart/degree/: degree.dart  degree_list.dart
lib/dart/form/: degree_list.dart  degrees_list_screen.dart  paper_list.dart
lib/dart/grade/: grade.dart
lib/dart/home/: display_pathway.dart  home.dart
lib/dart/major/: major.dart  major_list.dart
lib/dart/navigation/: navBar.dart  nav_bar.dart  nav_utils.dart  navigationProvider.dart  navigation_provider.dart
lib/dart/paper/: fetch_paper.dart  paper.dart  paper_list.dart  paper_utils.dart
lib/dart/pathway/: display_pathway.dart  pathway.dart  pathway_state.dart
lib/dart/points/: degree_points_screen.dart
lib/dart/state/: pathway.dart  pathway_state.dart
lib/data/: degree_majors.json  degree_test.txt  degree_urls.txt  degrees.json  doubleDegrees.txt  elective_papers.json  exampleMajorStructure.txt  exampleOfTheMajorStructure.json  headings.json  jsonformat.json  majorRequirements.json  major_requirements.json  majors.json  newFormat.json  output_file.json  paper_recommendations.json  paper_response.json  papercodes.pickle  papers_data.json  recomendedPapers.json  requirements.json  responseData.json  responseData.txt  singleDegreesWithMajors.json  specialDegrees.txt
lib/data/Schedules of papers/: Commerce.json  Science.json  Theology.json  artsAndMusic.json
lib/python/: allDegree.py  degreeURL.py  paperscraper.py  qualifications.py  schedule_scraper.py  test.py  testServer.py
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
navigation/: navigation_widget_test.dart
test/: home_widget_test.dart  widget_test.dart
test/cpp/: degree_requirements_test.cpp
test/dart/: main_test.dart
test/dart/degree/: degree_widget_test.dart
test/dart/grade/: grade_test.dart
test/dart/home/: pathway_widget_test.dart
test/dart/major/: major_widget_test.dart
test/dart/navigation/: navbar_widget_test.dart
test/dart/paper/: paper_widget_test.dart
test/dart/points/: points_widget_test.dart
test/dart/state/: pathway_widget_test.dart
test/dart/utils/: mock_client.dart
test/degree/: degree_widget_test.dart
test/home/: pathway_widget_test.dart
test/major/: major_widget_test.dart
test/navigation/: navigation_widget_test.dart
test/paper/: paper_widget_test.dart
test/points/: points_widget_test.dart
test/python/: test_all.py
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc
